<resources>
    <string name="favorites">Favorites</string>
    <string name="all">All</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email address</string>
    <string name="phone">Phone</string>
    <string name="favorite">Favorite</string>
    <string name="new_contact">New contact</string>
    <string name="save">Save</string>
    <string name="filter">Filter</string>
    <string name="edit_contact">Edit contact</string>
    <string name="name_error">Contact must have a valid name</string>
    <string name="all_contacts">All contacts</string>
    <string name="favorite_contacts">Favorite contacts</string>
    <string name="app_name">Contacts</string>
</resources>
